added place of my born and place

--- a/test.html
+++ b/test.html
@@ -5,3 +5,5 @@ i am 25 years old
 i am from India
 
 i have done my bachelor's from sppu university 
+
+i borm in india and currently living in nashik, maharshtra.
